finalized event implementation - you can edit, save and show an event - you customize the calendar day by setting MIN_DAILY_HOUR in the variables.ts - events are shown anonymous, if the user is not part of the event   -> we still have to ensure, that on event creation times are not overlapping

--- a/src/app/components/event-details/event-details.component.scss
+++ b/src/app/components/event-details/event-details.component.scss
@@ -3,6 +3,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 32;
+  height: 100vh;
+  width: 100%;
 }
 
 .event-details-component-background{
